# Argus-Pilot-System

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  cli.py  pyproject.toml  setup.cfg  项目源提示词.md
config/: settings.py
core/: adapter_manager.py  engine.py  grpc_client.py  grpc_server.py
protos/: core_services.proto
tests/core/: test_adapter_manager.py
tests/utils/: test_proto_utils.py
utils/: logging_config.py  proto_utils.py
文档/外部参考资料/: 外部参考资料汇总.md  控制框架模块化控制构想.md  通用计算机控制框架.md
文档/开发规范/: Bug跟踪基本流程和规范.md  代码风格规范.md  依赖管理基本原则.md  团队协作规范总览.md  开发流程总览.md  开源发布流程.md  文档编写基本规范.md  测试基本原则.md  版本控制规范.md  维护者职责与流程.md  行为准则.md  项目结构规范.md
文档/过程与状态记录基础/: Bug跟踪日志.md  任务进度日志.md  关键决策记录.md
文档/项目核心信息/: 核心需求概述.md  社区治理.md  详细接口设计.md  项目概述与目标.md  项目计划.md  项目路线图.md  高层设计与架构概述.md
